# cosmic-cat-creator

./: README.md  setup.cfg
cosmic-cats/: apogee.py  pop.py  popgen.py
cosmicats/: apogee.py  photobs.py  pop.py  popgen.py
src/cosmicats/: apogee.py  photobs.py  pop.py  popgen.py  utils.py
src/cosmicats.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
