[metadata]
# replace with your username:
name = cosmicats
version = 0.0.1
author = Katie Breivik
author_email = kbreivik@flatironinstitute.org
description = A package to generate astrophysical catalogs from cosmic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/katiebreivik/cosmic-cat-creator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ./
python_requires = >=3.6

